...
                ),
              ),
            ),
            NextButton(
              OnboardingPage.WELCOME,
              backgroundColor: backgroundColor,
              nextKey: const Key('nextAfterWelcome'),
            ),
          ],
        ),
      ),
    );
  }
...
